<resources>
    <string name="app_name">Audio guider</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_option_route_choice">Choose the road</string>
    <string name="menu_option_settings">Settings</string>
    <string name="map_type_offering">Choose the map type</string>
    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="dialog_option_accept">Accept</string>
    <string name="dialog_option_decline">Decline</string>
    <string name="map_menu_switch_map_type">Switch map type</string>
    <string name="contentDescription_map_icon">Map icon</string>
    <string name="contentDescription_settings_icon">Settings icon</string>
    <string name="route_1_title">Following ancient Prusses</string>
    <string name="noRoutesAvailable">No routes available</string>
    <string name="menuHeader">Choose the route</string>
    <string name="routeName_greatPrusses">At  the steps of the Great Prusses</string>
    <string name="landmark_RosgartenersGate">Rosgartener Gate</string>
    <string name="landmark_VasilevskiyMonument">Vasilevskiy Monument</string>
    <string name="landmark_KronprinzBarracks">Kronprinz Barracks</string>
    <string name="landmark_KingsGate">King\'s Gate</string>
    <string name="landmark_SackheimGate">Sackheim Gate</string>
</resources>
