<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".activities.MapsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/map_type_offering"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/map_type_dialog_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type_none"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type_normal"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type_satellite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type_terrain"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type_hybrid"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/map_type_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/dialog_option_decline"
            android:onClick="onMapTypeChangedClick"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/map_type_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/dialog_option_accept"
            android:onClick="onMapTypeChangedClick"/>

    </LinearLayout>

</LinearLayout>